Fixed z-index of FloatMessage

--- a/src/Component/FloatMessage.css
+++ b/src/Component/FloatMessage.css
@@ -13,6 +13,7 @@
   color: white;
   background: #000000c4;
   backdrop-filter: blur(20px);
+  z-index: 81;
 }
 
 .float-message-container > .head {
